--- a/UMKM Classification.ipynb
+++ b/UMKM Classification.ipynb
@@ -237,7 +237,7 @@
         "id": "nDNubKqnQ4ip"
       },
       "source": [
-        "Labeling is given by SME based on the requirements below and knowledge from data history of merchant GoFood\n",
+        "Labeling is given by SME based on the requirements below\n",
         "\n",
         "---\n",
         "\n",
